--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Language" content="en" />
     <meta name="description" content="Walla Walla Acupuncture: Inviting you to gain a deeper understanding of your potential for wellness." />
     <meta name="keywords" content="acupuncture walla advance clinic eastern medicine integrative health wellness guasha cupping herbal therapy nutrition" />
-    <meta name="description" content="Walla Walla Acupuncture" />
+    <meta name="author" content="Walla Walla Acupuncture" />
     <link href='img/favicon.gif' rel='shortcut icon' type='image/gif'>
     <link href='img/favicon.ico' rel='shortcut icon' type='image/ico'>
 <script>
