--- a/contact.html
+++ b/contact.html
@@ -66,39 +66,30 @@
 
             <div class="contact_hero fixed_adj contact_image">
 
-                <div class="backing contact_info" style="background-color:rgba(255,255,255,0.85)">
+                <div itemscope itemtype="http://schema.org/LocalBusiness" class="backing contact_info" style="background-color:rgba(255,255,255,0.85)">
 
                     <h3>To schedule an appointment, please call 509­-526­-0655.</h3>
                     <h4>Many insurance plans accepted, please call so we help you determine your benefits.</h4>
                     <h2 style="color:#D17A44;">Elena Mejia, LAc, FNP</h2>
 
-                    <ul class="location">
+                    <ul class="location" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                        <span itemprop="name">Walla Walla Acupuncture</span>
                         <li>Advance Health Clinic</li>
-                        <li>30 W Main St, Suite 202</li>
-                        <li>Walla Walla, WA  99362</li>
+                        <li><span itemprop="streetAddress">30 W Main St, Suite 202</span></li>
+                        <li><span itemprop="addressLocality">Walla Walla</span>, <span itemprop="addressRegion">WA</span> 99362</li>
                     </ul>
                     <ul style="margin-top:15px">
-                        <li>phone: 509-526-0655</li>
+                        <li><span itemprop="telephone">phone: 509-526-0655</span></li>
                         <li>fax: 509-526-6944</li>
                         <li><a href="mailto:wallawallaacupuncture@gmail.com">wallawallaacupuncture@gmail.com</a>
                         </li>
                     </ul>
                     <ul style="margin-top:15px">
                         <li>Clinic Hours:</li>
-                        <li>Mon&mdash;Friday 9am to 5pm</li>
+                        <li><meta itemprop="openingHours" content="Mo-Fr 9:00-17:00">Mon&mdash;Friday 9am to 5pm</li>
                     </ul>
 
                     <img src="img/map.jpg" style="margin-top:20px;">
-
-
-
-
-
-
-
-
-
-
 
                 </div>
             </div><!--  end contact hero -->
