--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Walla Walla Acupuncture</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 <meta http-equiv="Content-Language" content="en" />
-    <meta name="description" content="Walla Walla Acupuncture: Inviting you to gain a deeper understanding of your potential for wellness." />
+    <meta name="description" content="Walla Walla Acupuncture: Inviting you to gain a deeper understanding of your potential for wellness. Elena Mejia (LAc, FNP), East Asian Medicine and Family Nurse Practitioner, incorporates acupuncture, herbal therapy, nutrition, massage, as well as other modalities to treat a variety of conditions." />
     <meta name="keywords" content="acupuncture walla advance clinic eastern medicine integrative health wellness guasha cupping herbal therapy nutrition" />
     <meta name="author" content="Walla Walla Acupuncture" />
+    <meta name="google-site-verification" content="yfteJsT519Gjs3lj-4zJwKSQwvRdPCHgItGobKQiQj4" />
     <link href='img/favicon.gif' rel='shortcut icon' type='image/gif'>
     <link href='img/favicon.ico' rel='shortcut icon' type='image/ico'>
 <script>
@@ -44,15 +45,15 @@
         <div id="layout">
 
             <div id="main">
-                <div class="header">
-                    <h1>Walla Walla Acupuncture</h1>
+                <div class="header" itemscope itemtype="http://schema.org/LocalBusiness">
+                    <h1><span itemprop="name">Walla Walla Acupuncture</span></h1>
                     <h2>Integrative Healthcare</h2>
-                    <ul class="head_info">
+                    <ul class="head_info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                         <li>Elena Mejia, LAc, FNP</li>
                         <li>Advance Health Clinic</li>
-                        <li>30 W Main St, Suite 202</li>
-                        <li>Walla Walla, WA  99362</li>
-                        <li>509-526-0655</li>
+                        <li><span itemprop="streetAddress">30 W Main St, Suite 202</span></li>
+                        <li><span itemprop="addressLocality">Walla Walla</span>, <span itemprop="addressRegion">WA</span>  99362</li>
+                        <li><span itemprop="telephone">509-526-0655</span></li>
                     </ul>
                 </div>
                 <nav>
